--- a/chickenfries_weather_app/package.json
+++ b/chickenfries_weather_app/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.36.1",
     "@uidotdev/usehooks": "^2.4.1",
     "chart.js": "^4.0.1",
     "faker": "^5.5.3",
