--- a/chickenfries_weather_app/package.json
+++ b/chickenfries_weather_app/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.36.1",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.7",
     "chart.js": "^4.0.1",
     "faker": "^5.5.3",
     "react": "^18.2.0",
